# macke

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bot10.cpp  bot11.cpp  bot12.cpp  bot13.cpp  bot14.cpp  bot15.cpp  bot16.cpp  bot2.cpp  bot3.cpp  bot4.cpp  bot5.cpp  bot6.cpp  bot7.cpp  bot8.cpp  bot9.cpp  demo_bot.cpp  demo_bot.py  djina1.cpp  final.cpp  lczarb.cpp  logovi9.txt  nb2.cpp  novibot1.cpp  pobot.cpp  prsbot.cpp  rekorder.cpp  riskybot.cpp  riskybot2.cpp  screw.cpp  screw_v2.cpp  sigbot2.cpp  sigbot3.cpp  sigbot4.cpp  sigbot5.cpp  sigbot6.cpp  siguranbot.py
dalfa/: history_bot.py
dalfa/market_data/: Euronext_candles.csv  Euronext_events.csv  Euronext_orderbooks.csv  Euronext_trades.csv  HKEX_candles.csv  HKEX_events.csv  HKEX_orderbooks.csv  HKEX_trades.csv  JPX_candles.csv  JPX_events.csv  JPX_orderbooks.csv  JPX_trades.csv  LSE_candles.csv  LSE_events.csv  LSE_orderbooks.csv  LSE_trades.csv  NASDAQ_candles.csv  NASDAQ_events.csv  NASDAQ_orderbooks.csv  NASDAQ_trades.csv  NSE_candles.csv  NSE_events.csv  NSE_orderbooks.csv  NSE_trades.csv  NYSE_candles.csv  NYSE_events.csv  NYSE_orderbooks.csv  NYSE_trades.csv  SSE_candles.csv  SSE_events.csv  SSE_orderbooks.csv  (+9 more)
market_data/: Euronext_candles.csv  Euronext_trades.csv  HKEX_candles.csv  HKEX_trades.csv  JPX_candles.csv  JPX_trades.csv  LSE_candles.csv  LSE_trades.csv  NASDAQ_candles.csv  NASDAQ_trades.csv  NSE_candles.csv  NSE_orderbooks.csv  NSE_trades.csv  NYSE_candles.csv  NYSE_trades.csv  SSE_candles.csv  SSE_orderbooks.csv  SSE_trades.csv  TMX_candles.csv  TMX_trades.csv  ZSE_candles.csv
(+381 files in other folders)
